# vvx-worker

./: .gitignore  Cargo.toml  README.md  rabbitmq  voicevox  vvx-mock-bench.md
src/: lib.rs  messages.rs  mock_engine.rs  tts.rs  voicevox_engine.rs
