[package]
name = "vvx-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
camino = "1.1"
futures = "0.3"
lapin = "2.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10", features = ["v4"] }
voicevox_core = { git = "https://github.com/VOICEVOX/voicevox_core", features = ["load-onnxruntime"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3.13"
